--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Evans</string>
+    <string name="SeeMore">See More</string>
+    <string name="edit">Edit</string>
+    <string name="email">Email</string>
+    <string name="otherText">Other information: </string>
+    <string name="setApt">Set Appointment</string>
 </resources>
