--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,6 @@
     <string name="app_name">Evans</string>
     <string name="SeeMore">See More</string>
     <string name="edit">Edit</string>
-    <string name="email">Email</string>
-    <string name="otherText">Other information: </string>
     <string name="setApt">Set Appointment</string>
     <string name="title_activity_main2">Main2Activity</string>
 
@@ -26,4 +24,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="set_appt">Set Appointment</string>
+    <string name="save_edit">Save</string>
+
+    <string name="name">Name:</string>
+    <string name="phone">Phone:</string>
+    <string name="email">Email:</string>
+    <string name="other_text">Other information: </string>
 </resources>
