--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,9 @@
     <string name="notes">Notes:</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="goal_name">Goal Name</string>
+    <string name="start_date">Start Date</string>
+    <string name="end_date">End Date</string>
+    <string name="detail_goal">Details of Goal</string>
+    <string name="save_goal">Save</string>
 </resources>
