--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="end_date">End Date</string>
     <string name="detail_goal">Details of Goal</string>
     <string name="save_goal">Save</string>
+    <string name="repeat_times">Repeat Times</string>
+    <string name="dateEnterHint">Day-Month-Year Hour:Min</string>
 </resources>
