Working on implementing datpicker to work in the appointment_edit_fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,7 @@
     <string name="menu_exit"> Exit </string>
     <string name="menu_create_report"> Create Report </string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_main_fragment">Hello blank fragment</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="set_appt">Set Appointment</string>
     <string name="save_edit">Save</string>
 
@@ -35,6 +31,10 @@
     <string name="appointment_price">Price:</string>
     <string name="appointment_notes">Notes:</string>
     <string name="showed_up">Showed up </string>
+    <string name="pick_date">Pick Date</string>
+    <string name="date">Date</string>
+    <string name="time">Time</string>
+    <string name="pick_time">Pick Time</string>
 
     <string name="service_description">Description:</string>
     <string name="service_title">Title:</string>
