Customer edit can pass class to Customer view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Evans</string>
-    <string name="SeeMore">See More</string>
+    <string name="see_more">See More</string>
     <string name="edit">Edit</string>
-    <string name="setApt">Set Appointment</string>
+    <string name="set_appt">Set Appointment</string>
     <string name="title_activity_main2">Main2Activity</string>
 
     <!-- For the navigation drawer -->
@@ -25,8 +25,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="set_appt">Set Appointment</string>
-    <string name="save_edit">Save</string>
 
     <!--Field edit titles-->
     <string name="appointment_name">Name:</string>
@@ -53,8 +51,8 @@
     <string name="date_enter_hint">Day-Month-Year Hour:Min</string>
 
     <!-- button strings-->
+    <string name="button_edit">Edit</string>
     <string name="button_save">Save</string>
-    <string name="cancel">Cancel</string>
-
+    <string name="button_cancel">Cancel</string>
 
 </resources>
