--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="done">Done</string>
+    <string name="salesDate">Sales Date</string>
+    <string name="sale_service">Sale Service</string>
+    <string name="salesPrice">Sales Price</string>
+    <string name="salesCustomer">Sales Customer</string>
 
 
 </resources>
