dates work in financial report

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_service"> Service </string>
     <string name="menu_exit"> Exit </string>
     <string name="menu_create_report"> Create Report </string>
+    <string name="menu_fin_rep">Financial Report</string>
 
     <!--Field edit titles-->
     <string name="appointment_name">Name</string>
