--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,9 @@
     <string name="default_string">Default</string>
     <string name="bttn_calculate">Calculate</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
     <!-- Strings below here need to be sorted-->
 
