Fixed expense and services

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,8 @@
     <string name="goal_complete">Complete</string>
     <string name="goal_title">Title</string>
 
+    <string name="currency"> $ </string>
+
 
     <!-- Strings below here need to be sorted-->
 
