--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,8 @@
 
     <string name="title">Title</string>
 
-    <string name="currency"> $ </string>
+    <string name="currency">$</string>
+    <string name="default_money">$0.00</string>
 
     <string name="label_manage">Manage</string>
     <string name="label_app">App</string>
