Changes to different things

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="label_app">App</string>
 
     <string name="exit">Exit</string>
+    <string name="home">Home</string>
 
 
     <!-- Strings below here need to be sorted-->
